# libbot

./: .gitignore  CMakeLists.txt  Makefile  README  install_prereqs.sh
bot2-core/: CMakeLists.txt  Makefile
bot2-core/cmake/: lcmtypes.cmake  pods.cmake
bot2-core/java/: CMakeLists.txt
bot2-core/src/bot_core/: CMakeLists.txt  camtrans.c  camtrans.h  circular.c  color_util.c  ctrans.c
bot2-frames/: CMakeLists.txt
bot2-frames/cmake/: pods.cmake
bot2-frames/src/: CMakeLists.txt
bot2-frames/src/renderer/: CMakeLists.txt
bot2-frames/src/test/: CMakeLists.txt
bot2-lcm-utils/: CMakeLists.txt
bot2-lcm-utils/src/tunnel/: lcm_tunnel.cpp
bot2-lcmgl/: .gitignore  CMakeLists.txt
bot2-lcmgl/java/: CMakeLists.txt
bot2-lcmgl/lcmtypes/: .gitignore
bot2-lcmgl/python/src/bot_lcmgl/: __init__.py
bot2-lcmgl/src/bot_lcmgl_client/: CMakeLists.txt
bot2-lcmgl/src/bot_lcmgl_render/: CMakeLists.txt  lcmgl_bot_renderer.c  lcmgl_decode.c
bot2-lcmgl/src/lcmgl-viewer/: CMakeLists.txt
bot2-param/: CMakeLists.txt
bot2-param/lcmtypes/: bot_param_entry_t.lcm
bot2-param/src/param_client/: CMakeLists.txt  param_internal.c  param_util.c
bot2-param/src/param_server/: CMakeLists.txt  param_server.c  param_tool.c
bot2-param/src/param_tester/: CMakeLists.txt
bot2-procman/: .gitignore  CMakeLists.txt
bot2-procman/doc/: Doxyfile
bot2-procman/doc/content/: config_file.md  deputies_sheriffs.md  main.md  tutorial.md
bot2-procman/python/src/bot_procman/: __init__.py  deputy_cmd_t.py  info_t.py  orders_t.py  printf_t.py  sheriff.py  sheriff_cmd_t.py  sheriff_config.py  sheriff_script.py
bot2-procman/python/src/bot_procman/sheriff_gtk/: command_console.py  command_model.py  command_treeview.py  sheriff_dialogs.py  sheriff_gtk.py
bot2-procman/src/deputy/: CMakeLists.txt  procinfo.c  procman.c  procman.h  procman_deputy.c  signal_pipe.c  signal_pipe.h
bot2-vis/: CMakeLists.txt
bot2-vis/src/bot_vis/: CMakeLists.txt  default_view_handler.c  glm.c  viewer.c  viewer.h
bot2-vis/src/rwx-viewer/: CMakeLists.txt
bot2-vis/src/testers/: CMakeLists.txt
bot2-vis/src/wavefront-viewer/: CMakeLists.txt
